--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,6 @@ steps:
       arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
       zipAfterPublish: true
 
-  - task: PublishBuildArtifact@1
+  - task: PublishBuildArtifacts@1
     displayName: 'Publish artifact: drop'
     condition: succeeded()
